fix(navLink name): Doesn't align with page-menu
Add syncWidth by using addEventListener resize

Add width value that matches page-menu on first load

--- a/src/components/common/styles.scss
+++ b/src/components/common/styles.scss
@@ -33,12 +33,10 @@
     height: 100%;
     
     &.name {
-        padding: 10px 15px; /* Adjust padding */
         text-decoration: none;
-        color: inherit;
-        display: block; /* Make it a block-level element to take full width */
         box-sizing: border-box;  /* Make sure padding is included in the width */
-        padding-right: 15%;
+        min-width: 240.609px;
+        justify-content: flex-start;
     }
 
     &.contact-me, &.github {
